<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@color/background"
    tools:context="com.app.vpgroup.suduku2018.MainActivity">

    <LinearLayout
        android:gravity="center"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <TextView
            android:gravity="center"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_title"
            android:textSize="40sp"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <Button
            android:textSize="30sp"
            android:textStyle="italic"
            android:background="@null"
            android:id="@+id/btnStory"
            android:text="@string/story_lable"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"/>

        <Button
            android:textSize="30sp"
            android:textStyle="italic"
            android:background="@null"
            android:id="@+id/btnNewGame"
            android:text="@string/new_game_lable"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"/>

        <Button
            android:textSize="30sp"
            android:textStyle="italic"
            android:background="@null"
            android:id="@+id/btnContinue"
            android:text="@string/continue_lable"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"/>

        <Button
            android:id="@+id/btnAbout"
            android:textSize="30sp"
            android:textStyle="italic"
            android:background="@null"
            android:text="@string/about_lable"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2" />
        <Button
            android:textSize="30sp"
            android:textStyle="italic"
            android:background="@null"
            android:layout_marginBottom="3dp"
            android:id="@+id/btnExit"
            android:text="@string/exit_lable"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2" />
    </LinearLayout>
</LinearLayout>
